[tool.poetry]
name = "myrunshaw-api"
description = "My Runshaw FastAPI backend"
authors = ["Daniel Benge"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
asyncpg = "*"
fastapi = { version = ">=0.136.1", extras = ["standard"] }
pydantic = ">=2.13.3,<3.0.0"
python-dotenv = "*"
appwrite = "18.0.0"
gunicorn = "25.3.0"
uvicorn = "0.46.0"
beautifulsoup4 = "*"
onesignal-python-api = ">=5.4.0"
aiohttp = ">=3.13.5,<4.0.0"
requests = "*"
icalendar = "*"
pytz = "*"
redis = ">=7.4.0,<8.0.0"
lxml = ">=6.1.0,<7.0.0"
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-exporter-otlp-proto-http = "*"
opentelemetry-instrumentation-asyncpg = "*"
opentelemetry-instrumentation-aiohttp-client = "*"
opentelemetry-instrumentation-redis = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
asgi-lifespan = "*"
httpx = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
