[tool.poetry]
name = "myrunshaw-name-cache"
description = "My Runshaw name cache service"
authors = ["Daniel Benge"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
flask = "*"
redis = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
