[tool.poetry]
name = "myrunshaw-sync-engine"
description = "My Runshaw sync engine"
authors = ["Daniel Benge"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
psycopg2-binary = "*"
icalendar = "*"
requests = "*"
python-dotenv = "*"
pytz = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
